--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,8 @@
-# This file lists all individuals having contributed 
-# content to the repository.
+# These individuals contributed to the hbnb project in this repository
 
-Musa Abraham <profaimusa@gmail.com>
+Bezaleel Olakunori <bezaleeloci@gmail.com>
+Ezra Nobrega <ezra.nobrega@outlook.com>
+Justin Majetich <justinmajetich@gmail.com>
+Kenechukwu Nsofor <nsoforkenechukwu2@gmail.com>
+Eyob Alamerew <eyob.alamerew.belay@gmail.com>
+Abel Berhanu <abelberhanu6@gmail.com>
