--- a/AUTHORS
+++ b/AUTHORS
@@ -1,8 +1,3 @@
-# These individuals contributed to the hbnb project in this repository
+# This file lists all individuals having contributed content to the repository.
 
-Bezaleel Olakunori <bezaleeloci@gmail.com>
-Ezra Nobrega <ezra.nobrega@outlook.com>
-Justin Majetich <justinmajetich@gmail.com>
-Kenechukwu Nsofor <nsoforkenechukwu2@gmail.com>
-Eyob Alamerew <eyob.alamerew.belay@gmail.com>
-Abel Berhanu <abelberhanu6@gmail.com>
+Musa Abraham <profaimusa@gmail.com>
